# c-labs

./: lab1.cpp  lab2.cpp  lab3.cpp  lab4.cpp  lab5.cpp  stack.cpp
lab7/: CMakeLists.txt  StudentAfter1session.cpp  StudentAfter1session.h  tests.cpp
lab8/: CMakeLists.txt  Stack.cpp  Stack.h  calc.cpp  calc.h  main.cpp  tests.cpp
laba6/: CMakeLists.txt  FractionClass.cpp  FractionClass.h  gtests.cpp  main.cpp
laba7/: StudentAfter1session.cpp  StudentAfter1session.h  StudentAfter2session.cpp  StudentAfter2session.h  functions.cpp  functions.h  main.cpp  student.cpp  student.h
